Adjust and Resolved the issue of elements overflowing horizontally by using  property.

--- a/cv-app/src/styles/01_ProfileForm.css
+++ b/cv-app/src/styles/01_ProfileForm.css
@@ -6,9 +6,14 @@
     margin: 20px auto;
     padding: 20px;
     border: 1px solid #aaa;
-    box-shadow: #aaa;
+
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        background: linear-gradient(to bottom,#11111111, #f7f7f7);
+    
+
     border-radius: 4px;
     font-size: 16px;
+    
 }
 
 .Profile {
@@ -20,17 +25,19 @@
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid linear-gradient(to bottom,#11111111, #f7f7f7);
     border-radius: 4px;
+    box-sizing: border-box;
 }
 
 input[type="file"] {
     margin-top: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid linear-gradient(to bottom,#11111111, #f7f7f7);
     border-radius: 4px;
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
+    box-sizing: border-box;
 }
 
 @media (max-width: 600px) {
